Fix navbar scrolling covering content's heading

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,7 +8,7 @@
 
 .nav {
   width: 100%;
-  height: 50px;
+  height: var(--nav-height);
   position: fixed;
   top: 0;
   background: rgba(0, 0, 0, 0.5);
