--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   --space-x: 1.75em;
   --clr-primary: #d81125;
+  --nav-height: 50px;
 }
 
 @media screen and (min-width: 30em) {
